--- a/src/patternfly/sass-utilities/scss-variables.scss
+++ b/src/patternfly/sass-utilities/scss-variables.scss
@@ -134,6 +134,7 @@ $pf-global--spacer--form-element: pf-size-prem(6px) !default;
 
 // Gutter
 $pf-global--gutter: $pf-global--spacer--lg !default;
+$pf-global--gutter--md: $pf-global--spacer--md !default;
 
 // Ratio
 $pf-global--golden-ratio: 1.681 !default;
